[project]
name = "dynamic-dncs"
version = "0.1.0"
description = "A very simple Dynamic DNS record updater that works with your Namecheap domain"
license = "LICENSE.md"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.0",
]
